--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://bqwlimca:kZi-1wIbzF8t_lfCTSAHx-4kgcrP7-n8@ruby.db.elephantsql.com/bqwlimca
+DATABASE_URL=postgresql://neondb_owner:npg_8QhvfrVZ1SLO@ep-orange-moon-adkyxpvx-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
